--- a/sobrenos.htm
+++ b/sobrenos.htm
@@ -30,7 +30,7 @@
                 <h2 class="subtitulo">Nosso Local</h2>
 				<hr>
                 <p>
-                    Nosso ponto de encontro para as melhores batatas-fritas está no <span class="linha">Shopping Metrô Tucuruvi</span>, ao lado da Praça de Eventos. Venha saborear no local ou peça pelo iFood!
+                    Nosso ponto de encontro para as melhores batatas-fritas está no <i class="linha">Shopping Metrô Tucuruvi</i>, ao lado da Praça de Eventos. Venha saborear no local ou peça pelo iFood!
                 </p>
                 <h2 class="subtitulo2">Entregas</h2>
                 <hr>
