--- a/sobrenos.htm
+++ b/sobrenos.htm
@@ -35,7 +35,7 @@
                 <h2 class="subtitulo2">Entregas</h2>
                 <hr>
 				<p>
-                    Estamos disponíveis para entrega rápida pelo <span class="linha">iFood</span>. Aproveite para pedir diretamente pelo app e tenha suas batatas-fritas crocantes no conforto de sua casa.
+                    Estamos disponíveis para entrega rápida pelo <i class="linha">iFood</i>. Aproveite para pedir diretamente pelo app e tenha suas batatas-fritas crocantes no conforto de sua casa.
                 </p>
             </div>
         </div>
