--- a/sobrenos.htm
+++ b/sobrenos.htm
@@ -24,7 +24,7 @@
     </header>
     <content class="container">
         <div class="sobre">
-            <img src="imagens/garoto-cone.jpg" alt="">
+            <img src="imagens/localizacao.png" alt="">
             <div class="texto">
                 <h1>Onde Estamos?</h1>
                 <h2 class="subtitulo">Nosso Local</h2>
